--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,22 +9,25 @@
     Club for runners in Dublin, Ireland.
     Urban running, trail running, Dublin docklands and Phoenix Park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise.">
-     <!-- title -->
-     <title>Love Running</title>
+    <!-- title -->
+    <title>Love Running</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="assets/css/style.css">
+    
 </head>
 <body>
     <!--Header-->
     <header>Header</header>
     <!--Main-->
+    <h1 class="lato">John Hookes is King!</h1>
     <main>Main</main>
 
     <!--Footer-->
     <footer>Footer</footer>
-    
+
 </body>
+
 </html>
