--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <!--Header-->
-    <header>Header</header>
+    <header>Love Running</header>
     <!--Main-->
     <h1 class="lato">John Hookes is King!</h1>
     <main>Main</main>
