added logo to header and applied oswald font sans serif

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 </head>
 <body>
     <!--Header-->
-    <header>Love Running</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
+    </header>
     <!--Main-->
     <h1 class="lato">John Hookes is King!</h1>
     <main>Main</main>
