--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
             <nav>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">gallery</a></li>
-                    <li><a href="">Sign Up</a></li>
+                <ul id="menu">
+                    <li><a href="" class="active">Home</a></li>
+                    <li><a href="" class="active">gallery</a></li>
+                    <li><a href="" class="active">Sign Up</a></li>
                 </ul>
             </nav>
         </a>
