--- a/index.html
+++ b/index.html
@@ -16,24 +16,25 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
 </head>
+
 <body>
     <!--Header-->
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
-        <input type="checkbox" id="nav-toggle" name="nav-toggle">    
-        <label for="nav-toggle" class="nav-toggle-label">x</label>
-            <nav>
-                <ul id="menu">
-                    <li><a href="" class="active">Home</a></li>
-                    <li><a href="" class="active">gallery</a></li>
-                    <li><a href="" class="active">Sign Up</a></li>
-                </ul>
-            </nav>
-        
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <nav>
+            <ul id="menu">
+                <li><a href="" class="active">Home</a></li>
+                <li><a href="" class="active">gallery</a></li>
+                <li><a href="" class="active">Sign Up</a></li>
+            </ul>
+        </nav>
+
     </header>
     <!--Main-->
 
