added social media icons to footer and burger menu icon to nav

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
-                <li><a href="" class="active">gallery</a></li>
-                <li><a href="" class="active">Sign Up</a></li>
+                <li><a href="">gallery</a></li>
+                <li><a href="">Sign Up</a></li>
             </ul>
         </nav>
 
@@ -41,8 +41,31 @@
     <main>Main</main>
 
     <!--Footer-->
-    <footer>Footer</footer>
-
+    <footer>
+        <ul>
+            <span><li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+        </span>
+        <span>
+            <li><a href="https://www.x.com" target="_blank" rel="noopener"
+                    aria-label="visit our X account formally twitter (opens in new tab)"><i class="fa-brands fa-x-twitter"></i></a>
+            </li>
+        </span>
+        <span>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
+                    aria-label="visit our youtube channel (opens in new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+        </span> 
+        <span>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="visit our Instagram page (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </span> 
+        </ul>
+    </footer>
+    <!-- font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/0fd9436766.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
