--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!--Footer-->
     <footer>
-        <ul>
+        <ul id="social-media">
             <span><li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
