--- a/index.html
+++ b/index.html
@@ -45,30 +45,58 @@
                 <h3>Dublin Docklands and Pheonix Park</h3>
             </div>
         </section>
+
+        <!-- Reason Section-->
+        <section id="" reasons>
+            <h2>Why Love Running With Us?</h2>
+            <div id="benefits">
+                <div id="benefits-physical">
+                    <div>
+                        <h3>Feel Healthy <i class="fa-solid fa-heartbeat"></i></h3>
+                        <hr>
+                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
+                            health. Plus, it burns calories and can build strength.</p>
+                    </div>
+                    <div>
+                        <h3>Feel Strong <i class="fa-solid fa-dumbbell"></i></h3>
+                        <hr>
+                        <p>.Running strengthens your heart by pumping blood more effectively through your body.</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
     <!--Footer-->
     <footer>
         <ul id="social-media">
-            <span><li><a href="https://www.facebook.com" target="_blank" rel="noopener"
-                    aria-label="visit our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
-            </li>
-        </span>
-        <span>
-            <li><a href="https://www.x.com" target="_blank" rel="noopener"
-                    aria-label="visit our X account formally twitter (opens in new tab)"><i class="fa-brands fa-x-twitter"></i></a>
-            </li>
-        </span>
-        <span>
-            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
-                    aria-label="visit our youtube channel (opens in new tab)"><i class="fa-brands fa-youtube"></i></a>
-            </li>
-        </span> 
-        <span>
-            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                    aria-label="visit our Instagram page (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
-            </li>
-        </span> 
+            <span>
+                <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                        aria-label="visit our facebook page (opens in new tab)"><i
+                            class="fa-brands fa-facebook"></i></a>
+                </li>
+            </span>
+            <span>
+                <li><a href="https://www.x.com" target="_blank" rel="noopener"
+                        aria-label="visit our X account formally twitter (opens in new tab)"><i
+                            class="fa-brands fa-x-twitter"></i></a>
+                </li>
+            </span>
+            <span>
+                <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
+                        aria-label="visit our youtube channel (opens in new tab)"><i
+                            class="fa-brands fa-youtube"></i></a>
+                </li>
+            </span>
+            <span>
+                <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                        aria-label="visit our Instagram page (opens in new tab)"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </li>
+            </span>
         </ul>
     </footer>
     <!-- font Awesome Kit-->
